Updates to boilerplate based on work to BCC-CPP

--- a/templates/includes/footer.liquid
+++ b/templates/includes/footer.liquid
@@ -1,12 +1,10 @@
-
-        <!-- CONTENT ENDS/THEME BEGINS -->
-
+      <!-- CONTENT ENDS/THEME BEGINS -->
       </div><!--/page-body-->
 
       {% if theme != false %}
 
         <div class="page-footer" role="contentinfo">
-          <div class="layout layout-constrained">
+          <div class="layout layout-constrained page-footer__top-bar">
             <div class="grid-wrap">
 
               <div class="grid-col tablet-grid-two-thirds">
@@ -20,14 +18,13 @@
                     <li><a href="#">Cookies</a></li>
                   </ul>
                 </div><!--/legal-nav-->
-
               </div><!--/grid-col-->
 
               <div class="grid-col tablet-grid-one-third">
 
                 <div class="logo-nav">
 
-                  <ul class="linklist">
+                  <ul>
                     <li class="logo-gov-uk">
                       <a href="https://www.gov.uk/">
                         <img src="/ui/images/logo-gov-uk-white.png" alt="Gov.uk logo" />
@@ -41,7 +38,6 @@
                   </ul>
 
                 </div><!--/logo-nav-->
-
               </div><!--/grid-one-third-->
 
             </div><!--/grid-wrap-->
@@ -69,6 +65,8 @@
     <script src="/ui/js/widgets/jquery.bcc.addresslookup.js"></script>
     <script src="/ui/js/widgets/jquery.bcc.binbasket.js"></script>
     <script src="/ui/js/widgets/jquery.bcc.overlays.js"></script>
+    <script src="/ui/js/widgets/jquery.bcc.sticky.js"></script>
+    <script src="/ui/js/widgets/jquery.bcc.collapsible.js"></script>
     <script src="/ui/js/app.js"></script>
     <!-- endbuild -->
 
