--- a/templates/includes/modules/list-table.liquid
+++ b/templates/includes/modules/list-table.liquid
@@ -1,9 +1,9 @@
-<ol class="list-table">
-	
+<ol class="list-table js-list-table">
+
 	{% include 'modules/list-table__row' %}
-	
+
 	{% assign list-table__row--complete = true %}
 
   {% include 'modules/list-table__row' %}
-	
+
 </ol>
