--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -144,6 +144,25 @@
         </div>
         <!--/grid-wrap-->
 
+        <hr />
+
+        <h2>Email templates</h2>
+        <div class="grid-wrap">
+          <div class="grid-col desktop-grid-one-third">
+            <ul>
+              <li><a href="email-templates/email_activation">Email activation</a></li>
+              <li><a href="email-templates/welcome_email">Welcome email</a></li>
+              <li><a href="email-templates/change_of_email">Change of email</a></li>
+              <li><a href="email-templates/forgot_password">Password change request</a></li>
+              <li><a href="email-templates/password_reset">Password reset</a></li>
+              <li><a href="email-templates/order_new_bin">Order new bin</a></li>
+            </ul>
+          </div>
+        </div>
+        <!--/grid-wrap-->
+
+        <hr />
+
       </div><!--/content-->
     </div><!--/layout-->
   </div><!--page-content-->
