--- a/templates/sect-account/change-home-address.liquid
+++ b/templates/sect-account/change-home-address.liquid
@@ -39,7 +39,7 @@
 
             {% comment %}<h2 class="panel__title">Change address</h2>{% endcomment %}
 
-            <form method="post" action="#" class="form form--validate" id="form-4">
+            <form method="post" action="#" class="form js-validation" id="form-4">
 
               <div class="form__item form__item--string-action">
                 <label class="form__label">Enter postcode</label>
