--- a/templates/sect-account/change-password-errors.liquid
+++ b/templates/sect-account/change-password-errors.liquid
@@ -29,7 +29,7 @@
 
           <div class="content content-main">
 
-            <form method="post" action="#" class="form form--validate" id="form-4">
+            <form method="post" action="#" class="form js-validation" id="form-4">
 
               <div class="form__feedback form__feedback--failure">
 
