--- a/templates/sect-create-account/create-your-account-1.liquid
+++ b/templates/sect-create-account/create-your-account-1.liquid
@@ -30,7 +30,7 @@
 
           <div class="content content-main">
 
-            <form id="form-2" class="form form--validate" action="#form-2" method="post">
+            <form id="form-2" class="form js-validation" action="#form-2" method="post">
 
               <!--
                 ATTRIBUTES
