--- a/templates/sect-create-account/create-your-account-3b.liquid
+++ b/templates/sect-create-account/create-your-account-3b.liquid
@@ -1,6 +1,6 @@
 {% block page %}
 
-  {% assign page_title = 'Create your account | Create account' %}
+  {% assign page_title = 'Activated account | Create account' %}
   {% assign ribbon = 'ico-user' %}
 
   {% include 'header' %}
