--- a/templates/sect-layouts/layout-grid.liquid
+++ b/templates/sect-layouts/layout-grid.liquid
@@ -4,6 +4,19 @@
   {% assign theme = false %}
 
   {% include 'header' %}
+  <style>
+  /*Styles added for demo purposes only*/
+  .grid-col code,
+  .mobile-grid-col code {
+      display: block;
+      border: 1px dotted #3c4147;
+      margin-bottom: 20px;
+      font-size: 11px;
+      font-size: .6875rem;
+      background: #f1f1f1;
+      padding: 10px 0;
+  }
+  </style>
 
   <div class="page-content">
 
