--- a/templates/sect-sign-in/sign-in-with-errors.liquid
+++ b/templates/sect-sign-in/sign-in-with-errors.liquid
@@ -37,7 +37,7 @@
 
             <p>All fields are mandatory <!--unless marked with <span class="form__label__optional">(optional)</span>--></p>
 
-            <form id="form-3" class="form form--validate" action="#form-3" method="post">
+            <form id="form-3" class="form js-validation" action="#form-3" method="post">
 
               <fieldset class="form__section">
 
