--- a/templates/sect-sign-in/sign-in.liquid
+++ b/templates/sect-sign-in/sign-in.liquid
@@ -44,7 +44,7 @@
           <div class="content content-main">
 
 
-            <form id="form-3" class="form form--validate" action="#form-3" method="post">
+            <form id="form-3" class="form js-validation" action="#form-3" method="post">
 
               <div class="form__section">
 
