--- a/ui/scss/core/_base.scss
+++ b/ui/scss/core/_base.scss
@@ -1,7 +1,7 @@
 // CORE: BASE
 
 html {
-  line-height: 1.5; // Unitless line-height - meyerweb.com/eric/thoughts/2006/02/08/unitless-line-heights/ (8 Feb 2006!!)
+  line-height: 1.5; // Unitless line-height - meyerweb.com/eric/thoughts/2006/02/08/unitless-line-heights/
   height: 100%;
   overflow-y: scroll;
 }
