--- a/ui/scss/core/_utils.scss
+++ b/ui/scss/core/_utils.scss
@@ -10,17 +10,6 @@
   @include cf;
 }
 
-// Suppress link styles for phone numbers
-.phone-link {
-  text-decoration: none !important;
-  cursor: default;
-
-  &:hover {
-    text-decoration: none !important;
-    color: inherit;
-  }
-
-}
 
 // Accessible skiplinks
 .skiplinks {
@@ -40,7 +29,7 @@
       display: block;
       margin: 0 auto;
       width: 30%;
-      padding: 8px 0;
+      @include rem(padding, 8 0);
       text-align: center;
       background: #333;
       background: rgba(0,0,0,0.6);
@@ -70,54 +59,17 @@
 
 }
 
-// Hanging indent
-// In situations where you have a floated element followed by an element containing paragraphs of text, you can use this
-// class to trigger a hanging indent so that the text does not wrap around the floated item.
-// info: stubbornella.org/content/2009/07/23/overflow-a-secret-benefit/
-// NOTE: use with caution - comes with risk of hiding overflowed content
-//
-%hanging-indent,
-.hanging-indent {
-  overflow: hidden;
+.media {
+  @include rem(margin,10);
 }
 
-/*
- * Responsive iframes fix
- * http://stackoverflow.com/questions/12676725/responsive-iframe-google-maps-and-weird-resizing
- */
-.iframe-responsive-wrap {
-  position: relative;
-  padding-bottom: 65.25%; // Relates to aspect ratio
-  padding-top: 30px;
-  height: 0;
-  //overflow: hidden;
-
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.media, .media__content {
+    overflow:hidden;
+    _overflow:visible;
+    zoom:1;
   }
+
+.media .img {
+  float:left;
+  @include rem(margin-right,10);
 }
-
-/* Horizontal rules, without <hr />
-   (Might be used in conjunction with l.-gutter--top)
-*/
-.rule-above {
-  @extend %cf;
-  @include rem(padding-top, 20);
-  border-top: 1px solid;
-}
-.rule-below {
-  margin-bottom: 10px;
-  @extend %cf;
-  @include rem(padding-bottom, 5);
-  border-bottom: 1px solid;
-}
-
-.media {margin:10px;}
-
-.media, .media__content {overflow:hidden; _overflow:visible; zoom:1;}
-
-.media .img {float:left; margin-right: 10px;}
