--- a/ui/scss/master.scss
+++ b/ui/scss/master.scss
@@ -14,7 +14,6 @@
 @import "core/utils";
 @import "core/hiding";
 @import "core/print";
-@import "core/forms";
 @import "core/proportional-grids";
 
 // PROJECT
@@ -23,7 +22,6 @@
 @import "core/vendor/uniform.default-mod";
 
 // Project: Base
-@import "core/base-mixins";
 @import "core/base-fonts";
 @import "core/base-layout";
 
@@ -33,11 +31,11 @@
 @import "core/global-icons";
 @import "core/global-body";
 @import "core/global-forms";
-@import "core/global-header";
 @import "core/global-banner";
 @import "core/global-footer";
 @import "core/global-overlays";
 @import "core/global-form-validation";
+@import "core/beta-header";
 
 // Project: Modules
 @import "core/modules/iconlist";
@@ -50,3 +48,6 @@
 @import "core/modules/address-lookup";
 @import "core/modules/tabs";
 @import "core/modules/date-card";
+
+// Service specific @TODO: Refactor these where possible
+@import "service/waste/iag-content";
