--- a/templates/includes/modules/basket__item.liquid
+++ b/templates/includes/modules/basket__item.liquid
@@ -1,36 +1,37 @@
-{% if basket__item__title == null %}{% assign basket__item__title = 'Black wheelie bin' %}{% endif %}
-{% if basket__item__handle == null %}{% assign basket__item__handle = 'black-wheelie-bin' %}{% endif %}
-{% if basket__item__qty == null %}{% assign basket__item__qty = 2 %}{% endif %}
-<div class="basket__item">
+{% if basket__item__title == null %}
+  {% assign basket__item__title   = 'Lorem ipsum' %}
+{% endif %}
+{% if basket__item__handle == null %}
+  {% assign basket__item__handle  = 'black-wheelie-bin' %}
+{% endif %}
+{% if basket__item__title == null %}
+  {% assign basket__item__info    = 'Lorem ipsum dolor set elit nullum.' %}
+{% endif %}
+{% if basket__item--shadow == true %}
+  {% assign basket__item--shadow  = 'basket__item--shadow' %}
+{% endif %}
+
+<fieldset class="basket__item {{ basket__item--shadow }}">
+
+  <legend class="visuallyhidden">{{ basket__item__title }}</legend>
 
   <div class="grid-wrap">
 
-    <div class="grid-col tablet-grid-four-fifths desktop-grid-nine-tenths">
+      <!-- @TODO: Should be five-fifths. Remove JS. -->
+      <div class="grid-col desktop-grid-full-width">
 
       <div class="basket__item__description">
-
         <h4 class="basket__item__title">{{ basket__item__title }}</h4>
-
         <div class="basket__item__image">
           <img src="/ui/images/waste/{{ basket__item__handle }}.png" alt="{{ basket__item__title }}" />
         </div><!--/basket__item__image-->
-
+        <div class="basket__item__info">
+          {{basket__item__info}}
+        </div><!--/basket__item__info-->
       </div><!--/basket__item__description-->
-
-    </div><!--/grid-col-->
-
-    <div class="grid-col tablet-grid-one-fifth desktop-grid-one-tenth">
-
-      <div class="basket__item__details">
-
-        <p class="basket__item__qty">
-          <strong>{{ basket__item__qty }}</strong>
-        </p><!--/basket__item__qty-->
-
-      </div><!--/basket__item__details-->
 
     </div><!--/grid-col-->
 
   </div><!--/grid-wrap-->
 
-</div><!--/basket__item-->
+</fieldset><!--/basket__item-->
