--- a/templates/sect-account/change-contact-details.liquid
+++ b/templates/sect-account/change-contact-details.liquid
@@ -29,7 +29,7 @@
 
           <div class="content content-main">
 
-            <form method="post" action="#" class="form form--validate" id="form-4">
+            <form method="post" action="#" class="form js-validation" id="form-4">
 
               <div class="form__item form__item--string">
                 <label class="form__label" for="ff-mobile">Mobile phone</label>
