--- a/templates/sect-account/change-email-address.liquid
+++ b/templates/sect-account/change-email-address.liquid
@@ -29,7 +29,7 @@
 
           <div class="content content-main">
 
-            <form method="post" action="#" class="form form--validate" id="form">
+            <form method="post" action="#" class="form js-validation" id="form">
 
               <div class="form__item form__item--string">
                 <dl class="form__item__list">
