--- a/ui/scss/core/_base-layout.scss
+++ b/ui/scss/core/_base-layout.scss
@@ -11,12 +11,13 @@
 
 .layout-constrained {
   max-width: $max-width;
-  padding: 0 10px;
+  @include rem(padding,0 10);
 }
 
 // GRIDS
 
 // Fractions
+// @TODO Add notes on how this works here
 $grid-columns:  full-width      1,
                 one-half        1/2,
                 one-third       1/3,
@@ -28,24 +29,24 @@ $grid-columns:  full-width      1,
                 three-fifths    3/5,
                 four-fifths     4/5,
                 one-sixth       1/6,
-                two-sixths       2/6,
+                two-sixths      2/6,
                 five-sixths     5/6,
-                // consider 7ths, 8ths, 9ths, 10ths & 11ths for helping keep nested grids 'on grid', i.e. inline with 12 column grid
                 one-seventh     1/7,
-                two-sevenths     2/7,
-                one-ninth     1/9,
-                three-ninths     3/9,
+                two-sevenths    2/7,
+                one-ninth       1/9,
+                three-ninths    3/9,
                 four-ninths     4/9,
                 five-ninths     5/9,
+                eight-ninths    8/9,
                 one-tenth       1/10,
                 nine-tenths     9/10,
                 one-twelfth     1/12,
-                three-twelfths     3/12,
+                three-twelfths  3/12,
                 five-twelfths   5/12,
                 seven-twelfths  7/12,
                 eleven-twelfths 11/12,
                 five-eightenths 5/18,
-                five-thirty-sixths 5/36;
+                five-thirty-sixths 5/36; // @TODO Explain why this has been added
 
 @include grids-init("grid");
 
@@ -55,17 +56,4 @@ $grid-columns:  full-width      1,
 
 @include respond-min($bp-desktop-min) {
   @include grids-init("desktop-grid");
-}
-
-// For grid demo
-.grid-col,
-.mobile-grid-col {
-  code {
-    display: block;
-    border: 1px dotted $bcc-grey-dark;
-    margin-bottom: 20px;
-    @include font-size(11);
-    background: #f1f1f1;
-    padding: 10px 0;
-  }
 }
