--- a/ui/scss/core/_global-banner.scss
+++ b/ui/scss/core/_global-banner.scss
@@ -2,7 +2,8 @@
    BANNER
    ======================================================*/
 
-// @TODO: Refactor structure - breadcrumb, ribbon and account as separate modules?
+// @OPTIMIZE: Consider Refactor structure - breadcrumb, ribbon and account as separate modules?
+// @TODO: Look at how we can refactor similar elements here
 
 .page-banner {
   background: $dark-grey;
@@ -31,28 +32,32 @@
     position: absolute;
     top: 0;
     left: 0;
-    .ribbon__hang__inner {
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
     .ico {
       color: #fff;
-      font-size: 4em;
+      @include font-size(64);
       display: block;
-
       position: absolute;
       left: 12%;
       bottom: 20px;
       margin: 0;
     }
   }
-
+  .ribbon__hang__inner {
+    // @TODO: Is this still necessary or is it superfluous
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 %page-banner__nav {
-  padding: 0.6em 0;
+  @include rem(padding,10 0);
   color: $grey-lighter;
+
+  li {
+    padding: 0.1em 0;
+    @include inline-block;
+  }
 
   a {
     color: $link-alt;
@@ -60,17 +65,8 @@
     &:hover { text-decoration: underline; }
   }
 
-  .linklist {
-
-    li {
-      padding: 0.1em 0;
-      @include inline-block;
-    }
-
-    .ico {
-      @include font-size(12);
-    }
-
+  .ico {
+    @include font-size(12);
   }
 
 }
@@ -95,47 +91,35 @@
     float: right;
   }
 
-  .linklist {
+  li {
+    display: block;
 
-    li {
-
-      display: block;
-
-      @include respond-min($bp-tablet-min) {
-        & {
-          @include inline-block;
-          margin-right: 11px;
-          border-left: 2px solid $grey-9;
-          padding-left: 12px;
-        }
-
-      }
-
-
-
+    @include respond-min($bp-tablet-min) {
+      @include inline-block;
+      @include rem(margin-right,11);
+      border-left: 2px solid $grey-9;
+      @include rem(padding-left,12);
     }
-
-    a {
-      color: $link-alt;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
-      .ico {
-        color: $link-alt;
-        @include rem(margin-left,-5);
-        @include rem(margin-right,3);
-        text-decoration: none;
-        float: left;
-        @include line-height(21);
-      }
-    }
-
-    .lnk-sign-out {
-      margin-left: 5px;
-      @include font-size($small-print-font-size);
-    }
-
   }
 
+  a {
+    color: $link-alt;
+    text-decoration: none;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  .ico {
+    color: $link-alt;
+    @include rem(margin-left,-5);
+    @include rem(margin-right,3);
+    text-decoration: none;
+    float: left;
+    @include line-height(21);
+  }
+}
+
+.lnk-sign-out {
+  @include rem(margin-left,5);
+  @include font-size($small-print-font-size);
 }
