--- a/ui/scss/core/modules/_what-to-do.scss
+++ b/ui/scss/core/modules/_what-to-do.scss
@@ -6,8 +6,8 @@
   background: $bcc-grey-dark;
   color: $white;
   @extend %cf;
-  padding: 1.5em 0;
-  margin-top: -6em; // TODO: Only margin in one direction? Unrealistic...
+  @include rem(padding,24 0);
+  @include rem(margin-top,-90);
   position: relative;
   z-index: 10;
 
